# alglib-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: ALGLIB-config.cmake.in  version.cpp.in
src/: minnlc_d_sparse.cpp
